# ExpenseSyncBot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  class_diagram.puml  main.py  pyproject.toml  requirements.txt
.github/prompts/: update-instructions.prompt.md
.github/workflows/: deploy.yml
config/: __init__.py  settings.py
src/: __init__.py  main.py
src/agents/: __init__.py  categorization_agent.py  constants.py  orchestrator.py  prompts.py  tools.py  validation_agent.py
src/core/: __init__.py  configs.py  llm_manager.py  logging.py
src/expense_agents/: __init__.py  business_rules.txt  orchestrator.py  prompts.py  tools.py
src/models/: __init__.py  schemas.py  transaction.py
src/services/: __init__.py  gocardless.py  mcp_client.py  mcp_server.py  openai_client.py
src/validators/: __init__.py  transaction_validator.py
